wal-macros/tests/rsx_macro_tests/elements/element_with_single_literal_fail.rs
use wal_macros::rsx;

fn main() {
    rsx! { <div> b"val" </div> };
}
